// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "default_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.allowClear: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": false,
      "autoFocus": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.allowClear: false_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.autoFocus: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": true,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.autoFocus: true_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.disabled: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "className": "{}",
      "disabled": true,
      "id": "properties.disabled: true_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label align: right - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label align: right_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label colon: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label colon: false_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label disabled: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label disabled: true_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label extra: showing extra - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label extra: showing extra_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label inline: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label inline: true_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label span: 12 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label span: 12_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.placeholder: Type your text here - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.placeholder: Type your text here_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": "Type your text here",
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.prefix: Prefix to the text - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.prefix: Prefix to the text_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": "Prefix to the text",
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.prefixIcon.size: 24 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.prefixIcon.size: 24_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": <IconBlock
        actions={Object {}}
        blockId="properties.prefixIcon.size: 24_prefixIcon"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "flexWrap": undefined,
                  },
                ],
                Array [
                  Object {
                    "height": 30,
                    "marginBottom": 8,
                    "overflow": undefined,
                    "whiteSpace": "normal",
                  },
                ],
                Array [
                  Array [
                    Object {
                      "height": "100% !important",
                    },
                    undefined,
                  ],
                ],
                Array [
                  Array [
                    Object {
                      "marginTop": 0,
                    },
                    undefined,
                  ],
                ],
                Array [
                  Array [
                    Object {
                      "marginTop": 0,
                    },
                    undefined,
                  ],
                ],
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"style\\":{}}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"style\\":{\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8,\\"height\\":30}}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"style\\":[{\\"height\\":\\"100% !important\\"},null]}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"style\\":[{\\"marginTop\\":0},null]}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"style\\":[{\\"marginTop\\":0},null]}",
                },
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerAction": [Function],
            "registerMethod": [Function],
            "setValue": [Function],
          }
        }
        properties={
          Object {
            "name": "AccountBookFilled",
            "size": 24,
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.prefixIcon: AccountBookFilled - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.prefixIcon: AccountBookFilled_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": <IconBlock
        actions={Object {}}
        blockId="properties.prefixIcon: AccountBookFilled_prefixIcon"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "flexWrap": undefined,
                  },
                ],
                Array [
                  Object {
                    "height": 30,
                    "marginBottom": 8,
                    "overflow": undefined,
                    "whiteSpace": "normal",
                  },
                ],
                Array [
                  Array [
                    Object {
                      "height": "100% !important",
                    },
                    undefined,
                  ],
                ],
                Array [
                  Array [
                    Object {
                      "marginTop": 0,
                    },
                    undefined,
                  ],
                ],
                Array [
                  Array [
                    Object {
                      "marginTop": 0,
                    },
                    undefined,
                  ],
                ],
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"style\\":{}}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"style\\":{\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8,\\"height\\":30}}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"style\\":[{\\"height\\":\\"100% !important\\"},null]}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"style\\":[{\\"marginTop\\":0},null]}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"style\\":[{\\"marginTop\\":0},null]}",
                },
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerAction": [Function],
            "registerMethod": [Function],
            "setValue": [Function],
          }
        }
        properties="AccountBookFilled"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: large - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.size: large_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": "large",
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: small - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.size: small_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": "small",
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.suffix: Suffix to the text - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.suffix: Suffix to the text_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": "Suffix to the text",
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.suffixIcon.size 24 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.suffixIcon.size 24_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": <IconBlock
        actions={Object {}}
        blockId="properties.suffixIcon.size 24_suffixIcon"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "flexWrap": undefined,
                  },
                ],
                Array [
                  Object {
                    "height": 30,
                    "marginBottom": 8,
                    "overflow": undefined,
                    "whiteSpace": "normal",
                  },
                ],
                Array [
                  Array [
                    Object {
                      "height": "100% !important",
                    },
                    undefined,
                  ],
                ],
                Array [
                  Array [
                    Object {
                      "marginTop": 0,
                    },
                    undefined,
                  ],
                ],
                Array [
                  Array [
                    Object {
                      "marginTop": 0,
                    },
                    undefined,
                  ],
                ],
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"style\\":{}}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"style\\":{\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8,\\"height\\":30}}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"style\\":[{\\"height\\":\\"100% !important\\"},null]}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"style\\":[{\\"marginTop\\":0},null]}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"style\\":[{\\"marginTop\\":0},null]}",
                },
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerAction": [Function],
            "registerMethod": [Function],
            "setValue": [Function],
          }
        }
        properties={
          Object {
            "name": "AlertFilled",
            "size": 24,
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.suffixIcon: AlertFilled - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.suffixIcon: AlertFilled_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": <IconBlock
        actions={Object {}}
        blockId="properties.suffixIcon: AlertFilled_suffixIcon"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  Object {
                    "flexWrap": undefined,
                  },
                ],
                Array [
                  Object {
                    "height": 30,
                    "marginBottom": 8,
                    "overflow": undefined,
                    "whiteSpace": "normal",
                  },
                ],
                Array [
                  Array [
                    Object {
                      "height": "100% !important",
                    },
                    undefined,
                  ],
                ],
                Array [
                  Array [
                    Object {
                      "marginTop": 0,
                    },
                    undefined,
                  ],
                ],
                Array [
                  Array [
                    Object {
                      "marginTop": 0,
                    },
                    undefined,
                  ],
                ],
                Array [
                  undefined,
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"style\\":{}}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"style\\":{\\"whiteSpace\\":\\"normal\\",\\"marginBottom\\":8,\\"height\\":30}}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"style\\":[{\\"height\\":\\"100% !important\\"},null]}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"style\\":[{\\"marginTop\\":0},null]}",
                },
                Object {
                  "type": "return",
                  "value": "{\\"style\\":[{\\"marginTop\\":0},null]}",
                },
                Object {
                  "type": "return",
                  "value": "{}",
                },
              ],
            },
            "registerAction": [Function],
            "registerMethod": [Function],
            "setValue": [Function],
          }
        }
        properties="AlertFilled"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "value": null,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title: My TextInput Title - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.title: My TextInput Title_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "prefix": undefined,
      "size": undefined,
      "suffix": undefined,
      "value": null,
    },
    Object {},
  ],
]
`;
